--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -3,6 +3,7 @@ html(lang="en")
   head
     title= title
     base(href="/")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
     
   body
     block content
