Added a manifest + launcher logos

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,8 +4,10 @@ html(lang="en")
     meta(charset="utf-8")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
     title= title
+    meta(name="description" content="placeholder")
     base(href="/")
     meta(name="viewport" content="width=device-width, initial-scale=1")
+    link(rel="manifest" href="/manifest.json")
 
   body
     block content
