--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -8,6 +8,7 @@ html(lang="en")
     base(href="/")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel="manifest" href="/manifest.json")
+    meta(name="theme-color" content="#21618C")
 
   body
     block content
