--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -14,6 +14,6 @@ html(lang="en")
     block content
 
     noscript#deferredStyles
-      link(rel='stylesheet' href='/dist/css/main.css' type="text/css")
+      link(rel='stylesheet' href='/dist/css/main.min.css?' + versions.css type="text/css")
 
-    script(src='/dist/js/main.js')
+    script(src='/dist/js/main.min.js?' + versions.js)
